--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Sonia Denikiewicz",
   "license": "MIT",
   "dependencies": {
+    "email-validator": "^2.0.4",
     "fs": "^0.0.1-security",
     "inquirer": "^6.5.0",
     "path": "^0.12.7",
